# databricks-mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-30-databricks-mcp.md
docs/superpowers/specs/: 2026-06-30-databricks-mcp-design.md
sample_data/: carriers.parquet  generate.py  lanes.parquet  shipments.parquet
src/databricks_mcp/: __init__.py  config.py  models.py  safety.py  server.py  tools.py
src/databricks_mcp/backends/: __init__.py  base.py  databricks_backend.py  duckdb_backend.py
tests/: conftest.py  test_databricks_backend.py  test_duckdb_backend.py  test_safety.py  test_server_smoke.py  test_tools.py
